canvas arc() missing line to start of arc if swing is zero https://bugs.webkit.org/show_bug.cgi?id=55696

Source/WebCore:

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-29
Reviewed by Andreas Kling.

Test: fast/canvas/canvas-arc-zero-lineto.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::arc):

LayoutTests:

LayoutTests/canvas/philip/tests/2d.path.stroke.prune.arc.html misinterprets pruning requirement
https://bugs.webkit.org/show_bug.cgi?id=66832

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-29
Reviewed by Andreas Kling.

Update to 2d.path.stroke.prune.arc.html was reviewed by Philip Taylor and will be part of the
next update to http://philip.html5.org/tests/canvas/suite/tests/2d.path.stroke.prune.arc.html

* canvas/philip/tests/2d.path.stroke.prune.arc.html:
* fast/canvas/canvas-arc-zero-lineto-expected.txt: Added.
* fast/canvas/canvas-arc-zero-lineto.html: Added.

Canonical link: https://commits.webkit.org/82924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93982 268f45cc-cd09-0410-ab3c-d52691b4dbfc